<resources>
    <string name="app_name">CashBook</string>
    <string name="user_edt">UserName</string>
    <string name="pwd_edt">Password</string>
    <string name="pwd_again_edt">Password Again</string>
    <string name="true_btn">TRUE</string>
    <string name="account_pwd_empty">UserName or password can not be empty</string>
    <string name="account_pwd_error">Incorrect username or password</string>
    <string name="two_pwd_match">Two passwords do not match</string>
    <string name="wait">Please wait</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="myself">Myself</string>
    <string name="set">Set</string>
    <string name="add_item">Add Item</string>
    <string name="about">About APP</string>
    <string name="title_accounting">Accounting</string>
    <string name="title_report">Report</string>
    <string name="title_other">Other</string>
    <string name="enter_the_mailbox">Enter the mailbox</string>
    <string name="add_budget">添加预算</string>
    <string name="accounting_item_income">+</string>
    <string name="accounting_item_expenditure">-</string>
    <string name="daily_books">日常账本</string>
    <string name="income">收入</string>
    <string name="expenditure">支出</string>
    <string name="make_money">赚钱</string>
    <string name="spend_money">花钱</string>
    <string name="remarks">备注</string>
    <string name="capital_account">资金账户</string>
    <string name="lost_time">流水时间</string>
    <string name="member">成员</string>

    <string name="e_bill">话费</string>
    <string name="e_diaper">尿布</string>
    <string name="e_entertainment">娱乐</string>
    <string name="e_film">电影</string>
    <string name="e_gift">礼金</string>
    <string name="e_home">家用</string>
    <string name="e_housing">住房</string>
    <string name="e_investment_loss">投资亏损</string>
    <string name="e_milk_powder">奶粉</string>
    <string name="e_nursery">育婴</string>
    <string name="e_tobacco_tea">烟酒茶</string>
    <string name="e_use_money">花钱</string>
    <string name="e_water_coal">水电煤</string>
    <string name="e_shopping">购物</string>
    <string name="e_apparel">服饰</string>
    <string name="e_beauty_makeup">护肤美妆</string>
    <string name="e_snacks">零食</string>
    <string name="e_fruit">水果</string>
    <string name="e_buy_food">买菜</string>
    <string name="e_daily_necessities">日用品</string>
    <string name="e_red_envelopes">发红包</string>
    <string name="e_traffic">交通</string>
    <string name="e_food">餐饮</string>


</resources>
