<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_myself"
            android:icon="@drawable/me"
            android:title="@string/myself" />
        <item
            android:id="@+id/nav_add_item"
            android:icon="@drawable/add_item"
            android:title="@string/add_item" />
        <item
            android:id="@+id/nav_set"
            android:icon="@drawable/set"
            android:title="@string/set" />
    </group>

    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
